--- a/projects/_03_independent_cqc/_05_model/fargate/preprocessing/Dockerfile
+++ b/projects/_03_independent_cqc/_05_model/fargate/preprocessing/Dockerfile
@@ -11,6 +11,7 @@ ENV PYTHONPATH=/app
 COPY polars_utils /app/polars_utils
 COPY projects/_03_independent_cqc/_05_model/fargate/preprocessing/preprocessing.py /app/preprocessing.py
 COPY projects/_03_independent_cqc/_05_model/fargate/preprocessing/requirements.txt /app/requirements.txt
+COPY projects/_03_independent_cqc/_05_model/model_registry.py /app/projects/_03_independent_cqc/_05_model/model_registry.py
 
 
 RUN pip install --no-cache-dir -r requirements.txt
