--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ openpyxl = "3.1.5"
 pandas = "2.3.2"
 pointblank = "0.13.1"
 polars = "1.32.3"
+pyarrow = "21.0.0"
 pydeequ = "1.5.0"
 pydoclint = "0.6.11"
 pyspark = "3.5.4"
