[977] Fix: improper copying of dependency

--- a/projects/_01_ingest/cqc_api/fargate/Dockerfile
+++ b/projects/_01_ingest/cqc_api/fargate/Dockerfile
@@ -12,7 +12,7 @@ COPY polars_utils polars_utils
 COPY projects/_01_ingest/cqc_api/utils projects/_01_ingest/cqc_api/utils
 COPY schemas/cqc_provider_schema_polars.py schemas/cqc_provider_schema_polars.py
 COPY schemas/cqc_locations_schema_polars.py schemas/cqc_locations_schema_polars.py
-COPY projects/_01_ingest/cqc_api/fargate/utils/*.py projects/_01_ingest/cqc_api/fargate/utils
+COPY projects/_01_ingest/cqc_api/fargate/utils projects/_01_ingest/cqc_api/fargate/utils
 COPY projects/_01_ingest/cqc_api/utils/postcode_replacement_dictionary.py projects/_01_ingest/cqc_api/utils/postcode_replacement_dictionary.py
 
 # Copy all python jobs to WORKDIR
