--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -332,10 +332,10 @@ workflows:
           filters:
             branches:
               ignore: main
-      # - test: # TODO revert this before merge
-      #     filters:
-      #       branches:
-      #         ignore: main
+      - test:
+          filters:
+            branches:
+              ignore: main
       - lint-python:
           filters:
             branches:
@@ -354,7 +354,7 @@ workflows:
           aws_account: "non_prod"
           requires:
             - lint-terraform
-            # - test # TODO revert this before merge
+            - test
             - task-containerisation
       - terraform-apply:
           access_key: AWS_ACCESS_KEY_ID_non_prod
