--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,6 +279,8 @@ jobs:
       - run:
           name: delete workspace
           command: |
+            export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID_non_prod}"
+            export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"
             cd terraform/pipeline
             terraform workspace select default
             terraform workspace delete << pipeline.parameters.GHA_Meta >>
