--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,7 +239,7 @@ jobs:
           from: dependencies
           to: "s3://$(cat terraform/pipeline/pipeline_resources_bucket_name)/dependencies"
 
-  copy-default-data:
+  copy-main-data:
     docker:
       - image: cimg/base:current
     resource_class: small
@@ -253,8 +253,12 @@ jobs:
             echo 'export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY_non_prod}"' >> "$BASH_ENV"
       - aws-s3/sync:
           aws-region: AWS_REGION
-          from: "s3://sfc-default-datasets/"
-          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/"
+          from: "s3://sfc-main-datasets/domain=ASCWDS/dataset=worker_cleaned/"
+          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ASCWDS/dataset=worker_cleaned/"
+      - aws-s3/sync:
+          aws-region: AWS_REGION
+          from: "s3://sfc-main-datasets/domain=ind_cqc_filled_posts/dataset=ind_cqc_estimated_filled_posts/"
+          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=ind_cqc_filled_posts/dataset=ind_cqc_estimated_filled_posts/"
       - aws-s3/sync:
           aws-region: AWS_REGION
           from: "s3://sfc-main-pipeline-resources/models/"
@@ -371,7 +375,7 @@ workflows:
           secret_key: AWS_SECRET_ACCESS_KEY_non_prod
           requires:
             - terraform-apply
-      - copy-default-data:
+      - copy-main-data:
           requires:
             - terraform-apply
 
