--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,7 +398,7 @@ workflows:
           aws_account: "non_prod"
           requires:
             - lint-terraform
-            - test
+            # - test
             - task-containerisation
       - terraform-apply:
           access_key: AWS_ACCESS_KEY_ID_non_prod
