--- a/lambdas/create_dataset_snapshot/Dockerfile
+++ b/lambdas/create_dataset_snapshot/Dockerfile
@@ -12,6 +12,7 @@ COPY lambdas/create_dataset_snapshot/lambda_function.py .
 COPY lambdas/utils/snapshots.py utils/
 COPY utils/column_names utils/column_names/
 COPY schemas schemas/
+COPY polars_utils polars_utils/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.lambda_handler" ]
