--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,10 +267,10 @@ jobs:
           aws-region: AWS_REGION
           from: "s3://sfc-main-datasets/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/"
           to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=capacity_tracker/dataset=capacity_tracker_non_residential_cleaned/"
-      # - aws-s3/sync:
-      #     aws-region: AWS_REGION
-      #     from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=full_providers_api/"
-      #     to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC_delta/dataset=full_providers_api/"
+      - aws-s3/sync:
+          aws-region: AWS_REGION
+          from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=full_providers_api/"
+          to: "s3://$(cat terraform/pipeline/datasets_bucket_name)/domain=CQC_delta/dataset=full_providers_api/"
       # - aws-s3/sync:
       #     aws-region: AWS_REGION
       #     from: "s3://sfc-main-datasets/domain=CQC_delta/dataset=delta_locations_api/version=3.0.0/"
